城市管理/校区管理/校区经理管理ing

--- a/Jkt.web/Bode.Web.csproj
+++ b/Jkt.web/Bode.Web.csproj
@@ -1407,8 +1407,11 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Areas\Admin\AdminAreaRegistration.cs" />
+    <Compile Include="Areas\Admin\Controllers\CityController.cs" />
     <Compile Include="Areas\Admin\Controllers\HomeController.cs" />
     <Compile Include="Areas\Admin\Controllers\IdentityController.cs" />
+    <Compile Include="Areas\Admin\Controllers\JcuController.cs" />
+    <Compile Include="Areas\Admin\Controllers\JcuSystemController.cs" />
     <Compile Include="Areas\Admin\Controllers\StudentController.cs" />
     <Compile Include="Areas\Admin\ViewModels\BannerSumViewModel.cs" />
     <Compile Include="Areas\Admin\ViewModels\BannerViewModel.cs" />
@@ -1491,6 +1494,9 @@
     <Content Include="Content\js\ueditor\third-party\video-js\font\vjs.ttf" />
     <Content Include="Content\js\ueditor\third-party\video-js\font\vjs.woff" />
     <Content Include="Areas\Admin\Views\Identity\Epassword.cshtml" />
+    <Content Include="Areas\Admin\Views\City\CityList.cshtml" />
+    <Content Include="Areas\Admin\Views\Jcu\JcuList.cshtml" />
+    <Content Include="Areas\Admin\Views\JcuSystem\JcuSystemList.cshtml" />
     <None Include="Properties\PublishProfiles\local.pubxml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
@@ -1500,6 +1506,7 @@
     </None>
   </ItemGroup>
   <ItemGroup>
+    <Folder Include="Areas\Admin\Views\Puc\" />
     <Folder Include="Areas\Admin\Views\Student\" />
     <Folder Include="Content\js\angular\i18n\ngLocale\" />
     <Folder Include="Content\js\ueditor\net\Bin\" />
