--- a/Jkt.web/bin/Bode.Web.dll.config
+++ b/Jkt.web/bin/Bode.Web.dll.config
@@ -45,10 +45,10 @@
   <connectionStrings>
     <!--<add name="mysql-default" connectionString="Server=localhost; Database=Bode.Default; Uid=root; Pwd=liuxx001;" providerName="MySql.Data.MySqlClient" />
     <add name="mysql-logging" connectionString="Server=localhost; Database=Bode.Logging; Uid=root; Pwd=liuxx001;" providerName="MySql.Data.MySqlClient" />-->
-    <add name="default" connectionString="Data Source=.;Initial Catalog=Jkt.Mian;User ID=sa;Password=1025forever;Pooling=True;MultipleActiveResultSets=True;Connect Timeout=18000" providerName="System.Data.SqlClient" />
-    <add name="logging" connectionString="Data Source=.;Initial Catalog=Jkt.Log;User ID=sa;Password=1025forever;Pooling=True;MultipleActiveResultSets=True;Connect Timeout=18000" providerName="System.Data.SqlClient" />
-    <!--<add name="default" connectionString="server=211.149.223.24;database=Test.Main;uid=sa;pwd=bode123456; Pooling=True; MultipleActiveResultSets=True;" providerName="System.Data.SqlClient" />
-    <add name="logging" connectionString="server=211.149.223.24;database=Test.Log;uid=sa;pwd=bode123456; Pooling=True; MultipleActiveResultSets=True;" providerName="System.Data.SqlClient" />-->
+    <!--<add name="default" connectionString="Data Source=.;Initial Catalog=Jkt.Mian;User ID=sa;Password=1025forever;Pooling=True;MultipleActiveResultSets=True;Connect" providerName="System.Data.SqlClient" />-->
+    <!--<add name="logging" connectionString="Data Source=.;Initial Catalog=Jkt.Log;User ID=sa;Password=1025forever;Pooling=True;MultipleActiveResultSets=True;Connect " providerName="System.Data.SqlClient" />-->
+    <add name="default" connectionString="server=.;database=Jkt.Mian.main;uid=sa;pwd=1025forever; pooling=true; multipleactiveresultsets=true;" providerName="system.data.sqlclient" />
+    <add name="logging" connectionString="server=.;database=Jkt.Log;uid=sa;pwd=1025forever; pooling=true; multipleactiveresultsets=true;" providerName="system.data.sqlclient" />
   </connectionStrings>
   <!--加入osharp.config-->
   <osharp configSource="osharp.config" />
