实现校区经理查看学员的权限

--- a/Bode.Services.Core/Bode.Services.Core.csproj
+++ b/Bode.Services.Core/Bode.Services.Core.csproj
@@ -172,6 +172,7 @@
     <Compile Include="Models\Student\City.cs" />
     <Compile Include="Models\Student\JCU.cs" />
     <Compile Include="Models\Student\JcuSystem.cs" />
+    <Compile Include="Models\Student\PracticeEntry.cs" />
     <Compile Include="Models\Student\StudentInfo.cs" />
     <Compile Include="Models\User\FeedBack.cs">
       <SubType>Code</SubType>
