修复学员逻辑错误、建立场地模型

--- a/Bode.Services.Implement/Bode.Services.Implement.csproj
+++ b/Bode.Services.Implement/Bode.Services.Implement.csproj
@@ -99,6 +99,8 @@
     <Compile Include="ModelConfigs\Student\CityConfiguration.cs" />
     <Compile Include="ModelConfigs\Student\JCUConfiguration.cs" />
     <Compile Include="ModelConfigs\Student\JcuSystemConfiguration.cs" />
+    <Compile Include="ModelConfigs\Student\PracticeEntryConfiguration.cs" />
+    <Compile Include="ModelConfigs\Student\SiteFactoryConfiguration.cs" />
     <Compile Include="ModelConfigs\Student\StudentInfoConfiguration.cs" />
     <Compile Include="ModelConfigs\User\FeedBackConfiguration.cs" />
     <Compile Include="ModelConfigs\User\ValidateCodeConfiguration.cs" />
