--- a/Jkt.web/Bode.Web.csproj
+++ b/Jkt.web/Bode.Web.csproj
@@ -1495,10 +1495,11 @@
     <Content Include="Content\js\ueditor\third-party\video-js\font\vjs.woff" />
     <Content Include="Areas\Admin\Views\Identity\Epassword.cshtml" />
     <Content Include="Areas\Admin\Views\City\CityList.cshtml" />
-    <Content Include="Areas\Admin\Views\Jcu\JcuList.cshtml" />
+    <Content Include="Areas\Admin\Views\JcuSystem\JcuList.cshtml" />
     <Content Include="Areas\Admin\Views\JcuSystem\JcuSystemList.cshtml" />
     <Content Include="Areas\Admin\Views\Student\StudentList.cshtml" />
     <Content Include="Areas\Admin\Views\Identity\FeedBackList.cshtml" />
+    <Content Include="Areas\Admin\Views\Student\EntryPracticeList.cshtml" />
     <None Include="Properties\PublishProfiles\local.pubxml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
@@ -1508,6 +1509,7 @@
     </None>
   </ItemGroup>
   <ItemGroup>
+    <Folder Include="Areas\Admin\Views\Jcu\" />
     <Folder Include="Areas\Admin\Views\Puc\" />
     <Folder Include="Content\js\angular\i18n\ngLocale\" />
     <Folder Include="Content\js\ueditor\net\Bin\" />
