--- a/Bode.Services.Core/Bode.Services.Core.csproj
+++ b/Bode.Services.Core/Bode.Services.Core.csproj
@@ -117,6 +117,8 @@
     <Compile Include="Dtos\Student\CityDto.generated.cs" />
     <Compile Include="Dtos\Student\JCUDto.generated.cs" />
     <Compile Include="Dtos\Student\JcuSystemDto.generated.cs" />
+    <Compile Include="Dtos\Student\PracticeEntryDto.generated.cs" />
+    <Compile Include="Dtos\Student\SiteFactoryDto.generated.cs" />
     <Compile Include="Dtos\Student\StudentInfoDto.generated.cs" />
     <Compile Include="Dtos\User\FeedBackDto.generated.cs">
       <SubType>Code</SubType>
@@ -173,6 +175,7 @@
     <Compile Include="Models\Student\JCU.cs" />
     <Compile Include="Models\Student\JcuSystem.cs" />
     <Compile Include="Models\Student\PracticeEntry.cs" />
+    <Compile Include="Models\Student\SiteFactory.cs" />
     <Compile Include="Models\Student\StudentInfo.cs" />
     <Compile Include="Models\User\FeedBack.cs">
       <SubType>Code</SubType>
@@ -245,6 +248,8 @@
 ..\Dtos\Student\CityDto.generated.cs
 ..\Dtos\Student\JCUDto.generated.cs
 ..\Dtos\Student\JcuSystemDto.generated.cs
+..\Dtos\Student\PracticeEntryDto.generated.cs
+..\Dtos\Student\SiteFactoryDto.generated.cs
 ..\Dtos\Student\StudentInfoDto.generated.cs
 ..\Dtos\User\FeedBackDto.generated.cs
 ..\Dtos\User\UserInfoDto.generated.cs
