修改个人资料

--- a/Jkt.web/Bode.Web.csproj
+++ b/Jkt.web/Bode.Web.csproj
@@ -1500,6 +1500,7 @@
     <Content Include="Areas\Admin\Views\Student\StudentList.cshtml" />
     <Content Include="Areas\Admin\Views\Identity\FeedBackList.cshtml" />
     <Content Include="Areas\Admin\Views\Student\EntryPracticeList.cshtml" />
+    <Content Include="Areas\Admin\Views\Identity\InfoEdit.cshtml" />
     <None Include="Properties\PublishProfiles\local.pubxml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
